# llm-interpretability-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
examples/: demo_pretrained.py  sentiment_classification.py  serve_demo.py
notebooks/: 01_quick_start.ipynb
src/: __init__.py  pipeline.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/interpretability/: __init__.py  attention_visualizer.py  integrated_gradients.py  lime_explainer.py  shap_explainer.py
src/models/: __init__.py  classifier.py
src/utils/: __init__.py  metrics.py  visualization.py
tests/: __init__.py  test_pipeline.py
